--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw AngleDimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+AngleDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_AngleDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw AngleDimension (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Dimensi&oacute;n &Aacute;ngulo (21% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/TechDraw_AngleDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Cote angulaire (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -80,11 +80,8 @@
 </p><p><span id="Change_properties"></span>
 </p>
 <h3><span class="mw-headline" id="Eigenschaften_anpassen">Eigenschaften anpassen</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Um die Eigenschaften eines Ma&szlig;es (Dimension-Objekt) zu &auml;ndern, wird es in der Zeichnung oder in der <a href="../de/Tree_view.html" class="mw-redirect" title="Tree view/de">Baumansicht</a> doppelt angeklickt. Dadurch wird der Dialog <a href="../de/TechDraw_LengthDimension.html#Dialog_Ma%C3%9Feintrag" title="TechDraw LengthDimension/de">Ma&szlig;eintrag</a> ge&ouml;ffnet.
-</p>
-</div>
-<p><span id="Limitations"></span>
+<p>Um die Eigenschaften eines Ma&szlig;es (Dimension-Objekt) zu &auml;ndern, wird es in der Zeichnung oder in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> doppelt angeklickt. Dadurch wird das <a href="../de/TechDraw_LengthDimension.html#Dimension_task_panel" title="TechDraw LengthDimension/de">Aufgaben-Fenster Ma&szlig;eintrag</a> ge&ouml;ffnet.
+</p><p><span id="Limitations"></span>
 </p>
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
 <p>Dimension-Objekte (Ma&szlig;e) sind anf&auml;llig f&uuml;r das "<a href="../de/Topological_naming_problem.html" title="Topological naming problem/de">Topological-Naming-Problem</a>" (Problem der topologischen Benennung). Siehe <a href="../de/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
@@ -140,35 +137,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220854
+Cached time: 20260111220940
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.141 seconds
-Preprocessor visited node count: 365/1000000
+CPU time usage: 0.075 seconds
+Real time usage: 0.129 seconds
+Preprocessor visited node count: 364/1000000
 Post&#8208;expand include size: 28076/2097152 bytes
 Template argument size: 11126/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1990/5000000 bytes
+Unstrip post&#8208;expand size: 1994/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.666      1 -total
- 24.89%    7.136      1 Template:TechDraw_Tools_navi/de
- 13.42%    3.848      2 Template:Navigation_menu_2
- 11.53%    3.305      1 Template:GuiCommand/de
-  9.82%    2.815      1 Template:Userdocnavi/de
-  9.78%    2.803      2 Template:Docnav/de
-  9.77%    2.802      1 Template:Value
-  7.82%    2.241      1 Template:Version/de
-  7.68%    2.202      2 Template:Button
-  7.12%    2.042      1 Template:VersionMinus/de
+100.00%   30.912      1 -total
+ 27.22%    8.415      1 Template:Value
+ 22.77%    7.040      1 Template:TechDraw_Tools_navi/de
+ 12.01%    3.713      2 Template:Navigation_menu_2
+ 10.40%    3.216      1 Template:Userdocnavi/de
+  9.98%    3.086      2 Template:Docnav/de
+  7.86%    2.431      1 Template:GuiCommand/de
+  5.10%    1.577      1 Template:Caption
+  4.46%    1.380      1 Template:Version/de
+  4.46%    1.380      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220854 and revision id 1736591. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220940 and revision id 1736593. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
