--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -84,7 +84,7 @@
 </p><p><span id="Limitations"></span>
 </p>
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
-<p>Dimension-Objekte (Ma&szlig;e) sind anf&auml;llig f&uuml;r das "<a href="../de/Topological_naming_problem.html" title="Topological naming problem/de">Topological-Naming-Problem</a>" (Problem der topologischen Benennung). Siehe <a href="../de/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
+<p>Dimension-Objekte (Ma&szlig;e) sind anf&auml;llig f&uuml;r das &bdquo;<a href="../de/Topological_naming_problem.html" title="Topological naming problem/de">Topological-Naming-Problem</a>&ldquo; (Problem der topologischen Benennung). Siehe <a href="../de/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -137,12 +137,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220940
+Cached time: 20260111221006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.132 seconds
 Preprocessor visited node count: 364/1000000
 Post&#8208;expand include size: 28076/2097152 bytes
 Template argument size: 11126/2097152 bytes
@@ -153,19 +153,19 @@ Unstrip post&#8208;expand size: 1994/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.912      1 -total
- 27.22%    8.415      1 Template:Value
- 22.77%    7.040      1 Template:TechDraw_Tools_navi/de
- 12.01%    3.713      2 Template:Navigation_menu_2
- 10.40%    3.216      1 Template:Userdocnavi/de
-  9.98%    3.086      2 Template:Docnav/de
-  7.86%    2.431      1 Template:GuiCommand/de
-  5.10%    1.577      1 Template:Caption
-  4.46%    1.380      1 Template:Version/de
-  4.46%    1.380      1 Template:Incode
+100.00%   27.750      1 -total
+ 22.84%    6.339      1 Template:TechDraw_Tools_navi/de
+ 14.52%    4.028      1 Template:Value
+ 12.01%    3.332      2 Template:Navigation_menu_2
+ 11.18%    3.103      1 Template:GuiCommand/de
+  9.76%    2.709      1 Template:Incode
+  9.36%    2.598      2 Template:Docnav/de
+  7.19%    1.994      1 Template:Caption
+  6.61%    1.833      1 Template:VersionMinus/de
+  6.44%    1.788      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111220940 and revision id 1736593. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111221005 and revision id 1736595. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
