--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -88,7 +88,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Hinweise" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
+<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Notes" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
 </p><p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
@@ -137,12 +137,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221006
+Cached time: 20260111221018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.204 seconds
 Preprocessor visited node count: 364/1000000
 Post&#8208;expand include size: 28076/2097152 bytes
 Template argument size: 11126/2097152 bytes
@@ -153,19 +153,19 @@ Unstrip post&#8208;expand size: 1994/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.750      1 -total
- 22.84%    6.339      1 Template:TechDraw_Tools_navi/de
- 14.52%    4.028      1 Template:Value
- 12.01%    3.332      2 Template:Navigation_menu_2
- 11.18%    3.103      1 Template:GuiCommand/de
-  9.76%    2.709      1 Template:Incode
-  9.36%    2.598      2 Template:Docnav/de
-  7.19%    1.994      1 Template:Caption
-  6.61%    1.833      1 Template:VersionMinus/de
-  6.44%    1.788      2 Template:Button
+100.00%   59.143      1 -total
+ 19.08%   11.286      1 Template:GuiCommand/de
+ 15.37%    9.093      2 Template:Docnav/de
+ 14.37%    8.497      1 Template:TechDraw_Tools_navi/de
+ 11.92%    7.049      1 Template:Version/de
+ 11.14%    6.589      1 Template:Userdocnavi/de
+ 10.45%    6.180      1 Template:Value
+  8.83%    5.221      1 Template:VersionMinus/de
+  5.94%    3.515      2 Template:Navigation_menu_2
+  3.02%    1.787      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111221005 and revision id 1736595. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111221018 and revision id 1736597. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
