--- a/wiki/de/TechDraw_AngleDimension.html
+++ b/wiki/de/TechDraw_AngleDimension.html
@@ -92,7 +92,7 @@
 </p><p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
-<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Eigenschaften" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
+<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Properties" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -137,12 +137,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221018
+Cached time: 20260111221025
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.204 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 364/1000000
 Post&#8208;expand include size: 28076/2097152 bytes
 Template argument size: 11126/2097152 bytes
@@ -153,19 +153,19 @@ Unstrip post&#8208;expand size: 1994/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.143      1 -total
- 19.08%   11.286      1 Template:GuiCommand/de
- 15.37%    9.093      2 Template:Docnav/de
- 14.37%    8.497      1 Template:TechDraw_Tools_navi/de
- 11.92%    7.049      1 Template:Version/de
- 11.14%    6.589      1 Template:Userdocnavi/de
- 10.45%    6.180      1 Template:Value
-  8.83%    5.221      1 Template:VersionMinus/de
-  5.94%    3.515      2 Template:Navigation_menu_2
-  3.02%    1.787      1 Template:Incode
+100.00%   40.081      1 -total
+ 22.95%    9.197      1 Template:TechDraw_Tools_navi/de
+ 21.21%    8.503      1 Template:Value
+ 13.35%    5.351      1 Template:VersionMinus/de
+ 12.61%    5.054      1 Template:Caption
+ 10.32%    4.137      2 Template:Navigation_menu_2
+ 10.00%    4.010      1 Template:Incode
+  5.23%    2.095      1 Template:Userdocnavi/de
+  4.98%    1.996      1 Template:GuiCommand/de
+  4.94%    1.981      2 Template:Docnav/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111221018 and revision id 1736597. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:94033-0!canonical and timestamp 20260111221025 and revision id 1736599. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
