--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -57,7 +57,9 @@ App::PropertyVector
 </p>
 <ul><li><b>Data</b> vlastnost&iacute;, souvisej&iacute;c&iacute; s "fyzick&yacute;mi" parametry objektu. <b>Data</b> vlastnost&iacute; definuj&iacute; z&aacute;kladn&iacute; charakteristiky objektu. Existuj&iacute; v&#382;dy, i kdy&#382; je FreeCAD pou&#382;&iacute;v&aacute;n v konzolov&eacute;m re&#382;imu nebo jako knihovna. To znamen&aacute;, &#382;e pokud na&#269;tete dokument v re&#382;imu konzoly, m&#367;&#382;ete upravit polom&#283;r kruhu nebo d&eacute;lku &#269;&aacute;ry, i kdy&#382; v&yacute;sledek na obrazovce nevid&iacute;te.</li>
 <li><b>Zobrazen&iacute;</b> vlastnost&iacute; souvisej&iacute;c&iacute; s "vizu&aacute;ln&iacute;m" vzhledem objektu. <b>Zobrazen&iacute;</b> vlastnost&iacute; jsou v&aacute;z&aacute;ny na <code>ViewObject</code> objektu a jsou p&#345;&iacute;stupn&eacute; pouze p&#345;i na&#269;ten&iacute; grafick&eacute;ho u&#382;ivatelsk&eacute;ho rozhran&iacute; (GUI). Nejsou p&#345;&iacute;stupn&eacute; p&#345;i pou&#382;&iacute;v&aacute;n&iacute; FreeCADu v konzolov&eacute;m re&#382;imu nebo jako bezhlavou knihovnu. Ve v&yacute;choz&iacute;m nastaven&iacute; se zm&#283;ny vlastnost&iacute; zobrazen&iacute; nep&#345;id&aacute;vaj&iacute; do z&aacute;sobn&iacute;ku zp&#283;tn&yacute;ch akc&iacute; a nelze je vr&aacute;tit zp&#283;t ani opakovat pomoc&iacute; <a href="../index.php?title=Std_Undo/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Undo/cs (page does not exist)">Std Undo</a> a <a href="../index.php?title=Std_Redo/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Redo/cs (page does not exist)">Std Redo</a>. Toto nastaven&iacute; je v&scaron;ak mo&#382;n&eacute; zm&#283;nit nastaven&iacute;m parametru <a href="../index.php?title=Fine-tuning/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Fine-tuning/cs (page does not exist)">fine-tuning</a> <b>AutoTransactionView</b> na <code>true</code>.</li></ul>
-<h2><span class="mw-headline" id="Basic_properties">Basic properties</span></h2>
+<p><span id="Basic_properties"></span>
+</p>
+<h2><span id="Z.C3.A1kladn.C3.AD_vlastnosti"></span><span class="mw-headline" id="Z&aacute;kladn&iacute;_vlastnosti">Z&aacute;kladn&iacute; vlastnosti</span></h2>
 <p>Different objects may have different properties. However, many objects have the same properties because they are derived from the same internal class.
 </p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
 </p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
@@ -167,13 +169,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111221240
+Cached time: 20260111221306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.155 seconds
-Preprocessor visited node count: 702/1000000
+CPU time usage: 0.121 seconds
+Real time usage: 0.264 seconds
+Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32437/2097152 bytes
 Template argument size: 12580/2097152 bytes
 Highest expansion depth: 7/100
@@ -183,19 +185,19 @@ Unstrip post&#8208;expand size: 4003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.210      1 -total
- 19.79%    6.571      1 Template:Std_Base_navi/cs
- 19.34%    6.423      3 Template:Navigation_menu_2
- 13.04%    4.329      1 Template:Userdocnavi/cs
- 12.03%    3.994      1 Template:Interface_navi/cs
-  8.21%    2.728      1 Template:PropertyData
-  6.66%    2.210      2 Template:Docnav
-  6.48%    2.153     26 Template:MenuCommand
-  5.37%    1.785      1 Template:Code
-  4.34%    1.440      1 Template:Variable
+100.00%   78.971      1 -total
+ 22.29%   17.605      1 Template:PropertyData
+ 19.58%   15.459      1 Template:Variable
+ 16.23%   12.816      1 Template:Std_Base_navi/cs
+ 15.33%   12.103      1 Template:Interface_navi/cs
+ 13.02%   10.282      3 Template:Navigation_menu_2
+ 11.02%    8.703      1 Template:Userdocnavi/cs
+  4.93%    3.891      2 Template:Value
+  4.64%    3.664      2 Template:Docnav
+  3.86%    3.052      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221239 and revision id 1736603. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260111221306 and revision id 1736605. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
