--- a/wiki/de/TechDraw_Balloon.html
+++ b/wiki/de/TechDraw_Balloon.html
@@ -3,17 +3,15 @@
 <li><a href="../TechDraw_Balloon.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Balloon (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Bulle (73% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Pallinatura (73% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw adnotacj&#281; w formie dymka (73% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw adnotacj&#281; w formie dymka (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1087;&#1088;&#1080;&#1084;&#1077;&#1095;&#1072;&#1085;&#1080;&#1077; &#1074; &#1074;&#1099;&#1085;&#1086;&#1089;&#1082;&#1091;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54413;&#49440; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/de">Erg&auml;nzungVertikalesFasenma&szlig;</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierterBeschriftungstext</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/de">AxonometrischesL&auml;ngenma&szlig;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -134,14 +132,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/de">Erg&auml;nzungVertikalesFasenma&szlig;</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierterBeschriftungstext</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/de">AxonometrischesL&auml;ngenma&szlig;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -178,35 +174,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145746
+Cached time: 20260111221320
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.159 seconds
-Preprocessor visited node count: 813/1000000
-Post&#8208;expand include size: 31361/2097152 bytes
-Template argument size: 12077/2097152 bytes
+CPU time usage: 0.105 seconds
+Real time usage: 0.182 seconds
+Preprocessor visited node count: 811/1000000
+Post&#8208;expand include size: 31157/2097152 bytes
+Template argument size: 11941/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2309/5000000 bytes
+Unstrip post&#8208;expand size: 2314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.929      1 -total
- 31.40%   13.794     12 Template:PropertyData/de
- 17.72%    7.786      1 Template:TechDraw_Tools_navi/de
-  9.29%    4.081     17 Template:Variable
-  8.68%    3.814      5 Template:PropertyView/de
-  8.45%    3.714      1 Template:GuiCommand/de
-  8.37%    3.678      2 Template:Docnav/de
-  8.26%    3.627      2 Template:Navigation_menu_2
-  7.00%    3.075      1 Template:MenuCommand
-  5.79%    2.542      1 Template:Code
+100.00%   42.348      1 -total
+ 21.80%    9.232     12 Template:PropertyData/de
+ 14.89%    6.304      1 Template:Code
+ 13.85%    5.867      2 Template:Docnav/de
+ 13.69%    5.797      1 Template:TechDraw_Tools_navi/de
+ 12.46%    5.276     17 Template:Variable
+  8.07%    3.418      1 Template:GuiCommand/de
+  8.06%    3.415      5 Template:PropertyView/de
+  7.85%    3.326      2 Template:Navigation_menu_2
+  7.14%    3.022      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111145746 and revision id 1734406. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174884-0!canonical and timestamp 20260111221320 and revision id 1736609. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
